cabal-version:   3.0
name:            sp1-verifier-hs
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          Robert Soeldner
maintainer:      robert@kadena.io
extra-doc-files: CHANGELOG.md

data-files:
    verifier-assets/v4.0.0-rc.3/vk.bin

extra-source-files:
    Cargo.toml
    Cargo.lock
    src/lib.rs

build-type: Custom
custom-setup
    setup-depends: Cabal, base, directory, process

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        PlonkBn254.Verify,
        PlonkBn254.Utils.EmbedVMKeys
    build-depends:
        base ^>=4.20.0.0,
        bytestring,
        vector,
        template-haskell,
        filepath,
        directory

    hs-source-dirs:   src-hs
    default-language: Haskell2010

    extra-bundled-libraries: Csp1_verifier_hs

test-suite sp1-verifier-hs-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.0.0,
        sp1-verifier-hs,
        bytestring,
        base16-bytestring
